WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133481
REGRESSION: [CSS Regions] Regions with overflow:auto generate scrollbars even if the content flows into the following regions and as such, should not be scrolled
https://bugs.webkit.org/show_bug.cgi?id=133481
Summary
REGRESSION: [CSS Regions] Regions with overflow:auto generate scrollbars even...
Radu Stavila
Reported
2014-06-03 09:05:55 PDT
Created
attachment 232427
[details]
Test case - first region should NOT scroll REGRESSION: [CSS Regions] Regions with overflow:auto generate scrollbars even if the content flows into the following regions and as such, should not be scrolled.
Attachments
Test case - first region should NOT scroll
(1.31 KB, text/html)
2014-06-03 09:05 PDT
,
Radu Stavila
no flags
Details
Patch
(7.19 KB, patch)
2014-06-04 04:11 PDT
,
Radu Stavila
koivisto
: review+
Details
Formatted Diff
Diff
Patch with changed test text to avoid license issue
(8.28 KB, patch)
2014-06-04 05:11 PDT
,
Radu Stavila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radu Stavila
Comment 1
2014-06-03 09:08:09 PDT
This regressed in
https://bugs.webkit.org/show_bug.cgi?id=129487
Radu Stavila
Comment 2
2014-06-04 04:11:28 PDT
Created
attachment 232472
[details]
Patch
Radu Stavila
Comment 3
2014-06-04 05:11:17 PDT
Created
attachment 232474
[details]
Patch with changed test text to avoid license issue
WebKit Commit Bot
Comment 4
2014-06-04 05:41:58 PDT
Comment on
attachment 232474
[details]
Patch with changed test text to avoid license issue Clearing flags on attachment: 232474 Committed
r169586
: <
http://trac.webkit.org/changeset/169586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug